@@ -2,6 +2,8 @@ Cascading Change Log
 
 unreleased (wip 1.1)
 
+  Added support for configuring polling interval of job status via c.f.h.MultiMapReducePlanner.
+
   Added c.f.h.MultiMapReducePlanner optimization to detect 'equivalent' adjacent c.t.Tap instances in a c.f.Flow.
   This can drastically reduce the number of jobs when there are intermediate sinks between pipe assemblies.
   If the taps are not compatible, a job will be inserted to convert the temp tap data to the sink format.
